--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,6 +1,6 @@
 
-@import "./styles/partials/variables";
-@import "./styles/partials/header";
-@import "./styles/partials/footer";
+@import "./partials/variables";
+@import "./partials/header";
+@import "./partials/footer";
 
 
