--- a/styles/partials/_body.scss
+++ b/styles/partials/_body.scss
@@ -1,4 +1,14 @@
 
-.reservasMesas {
-    background-color: aquamarine;
+.accion {
+    background-color: rgb(120, 227, 192);
+
+ .buttonaccion{
+    display: flex;
+    flex-direction: center;
+background-color: #f70845;
+border: none;
+border-radius: 10 px;
+
+
+ }   
 }
