--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,6 +9,13 @@ body {
   background-color: var(--secondary-color);
 }
 
-.reservasMesas {
-  background-color: aquamarine;
+.accion {
+  background-color: rgb(120, 227, 192);
+}
+.accion .buttonaccion {
+  display: flex;
+  flex-direction: center;
+  background-color: #f70845;
+  border: none;
+  border-radius: 10 px;
 }/*# sourceMappingURL=styles.css.map */
