--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,6 +11,30 @@ body {
 
 .accion {
   background-color: rgb(120, 227, 192);
+  display: flex;
+  flex-wrap: nowrap;
+  align-content: space-between;
+  max-height: 40%;
+}
+.accion .accionseccion1 {
+  background-color: #D1DBBD;
+  max-width: 200px;
+  max-height: 200px;
+}
+.accion .accionseccion2 {
+  background-color: #91AA9D;
+  max-width: 200px;
+  max-height: 200px;
+}
+.accion .accionseccion3 {
+  background-color: #3E606F;
+  max-width: 200px;
+  max-height: 200px;
+}
+.accion .accionseccion4 {
+  background-color: #193441;
+  max-width: 200px;
+  max-height: 200px;
 }
 .accion .buttonaccion {
   display: flex;
