--- a/styles/partials/_body.scss
+++ b/styles/partials/_body.scss
@@ -40,11 +40,13 @@
  }
 
  .buttonaccion{
-    display: flex;
-    flex-direction: center;
-background-color: #f70845;
-border: none;
-border-radius: 10 px;
+
+background-color: black;
+color: aliceblue;
+padding: 10px;
+border: 0;
+border-radius: 05px;
+font-weight: 800;
 
  }
  }   
