--- a/styles/partials/_body.scss
+++ b/styles/partials/_body.scss
@@ -2,6 +2,7 @@
 .accion {
     background-color: rgb(120, 227, 192);
     display: grid;
+    gap: 20px;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2, 1fr);
    grid-template-areas:
