--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,35 +11,43 @@ body {
 
 .accion {
   background-color: rgb(120, 227, 192);
-  display: flex;
-  flex-wrap: nowrap;
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-areas: "accionseccion1 accionseccion2" "accionseccion3 accionseccion4";
   align-content: space-between;
   max-height: 40%;
 }
 .accion .accionseccion1 {
+  grid-area: accionseccion1;
   background-color: #D1DBBD;
   max-width: 200px;
   max-height: 200px;
 }
 .accion .accionseccion2 {
+  grid-area: accionseccion2;
   background-color: #91AA9D;
   max-width: 200px;
   max-height: 200px;
 }
 .accion .accionseccion3 {
+  grid-area: accionseccion3;
   background-color: #3E606F;
   max-width: 200px;
   max-height: 200px;
 }
 .accion .accionseccion4 {
+  grid-area: accionseccion4;
   background-color: #193441;
   max-width: 200px;
   max-height: 200px;
 }
 .accion .buttonaccion {
-  display: flex;
-  flex-direction: center;
-  background-color: #f70845;
-  border: none;
-  border-radius: 10 px;
+  background-color: black;
+  color: aliceblue;
+  padding: 10px;
+  border: 0;
+  border-radius: 5px;
+  font-weight: 800;
 }/*# sourceMappingURL=styles.css.map */
