--- a/styles/partials/_body.scss
+++ b/styles/partials/_body.scss
@@ -40,6 +40,13 @@
     max-height: 200px;
  }
 
+ .accionseccion5{  
+   grid-area: accionseccion4;
+   background-color: #59a4ca;
+   max-width: 200px;
+   max-height: 200px;
+}
+
  .buttonaccion{
 
 background-color: black;
