--- a/styles/styles.css
+++ b/styles/styles.css
@@ -43,6 +43,12 @@ body {
   max-width: 200px;
   max-height: 200px;
 }
+.accion .accionseccion5 {
+  grid-area: accionseccion4;
+  background-color: #59a4ca;
+  max-width: 200px;
+  max-height: 200px;
+}
 .accion .buttonaccion {
   background-color: black;
   color: aliceblue;
